[package]
name = "grt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
tracing = "0.1"
log = "0.4"
wgpu = "0.15"
specs =  { version = "0.18", features = ["specs-derive"] }
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]  }
cgmath = "0.18"
tobj = { version = "3.2.1", features = [ "async" ] }

# WebAssembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
 
[build-dependencies]
fs_extra = "1.2"
glob = "0.3"
 